# Niti-core

./: CHANGELOG.md  Cargo.toml  LICENCE  README.md  rust-toolchain.toml
avr-hal-generic/: Cargo.toml  build.rs
avr-hal-generic/src/: adc.rs  clock.rs  delay.rs  eeprom.rs  i2c.rs  lib.rs  port.rs  simple_pwm.rs  spi.rs  usart.rs  wdt.rs
avr-specs/: avr-atmega164pa.json  avr-atmega168.json  avr-atmega328.json  avr-atmega328p.json  sync-from-upstream.py
examples/: README.md
examples/arduino-mega2560/: Cargo.toml
examples/arduino-mega2560/.cargo/: config.toml
examples/arduino-nano/: Cargo.toml
examples/arduino-nano/.cargo/: config.toml
examples/arduino-uno/: Cargo.toml
examples/arduino-uno/.cargo/: config.toml
examples/atmega2560/: Cargo.toml  README.md
examples/niti-v1/: Cargo.toml
examples/niti-v1/.cargo/: config.toml
mcu/atmega-hal/: Cargo.toml
mcu/atmega-hal/src/: adc.rs  eeprom.rs  i2c.rs  lib.rs  port.rs  simple_pwm.rs  spi.rs  usart.rs  wdt.rs
niti-eal/: Cargo.toml
niti-eal/src/: clock.rs  delay.rs  lib.rs
niti-eal/src/port/: diecimila.rs  leonardo.rs  mega.rs  mod.rs  promicro.rs  trinket.rs  trinket_pro.rs  uno.rs
niti-hal/: Cargo.toml
niti-hal/src/: clock.rs  delay.rs  lib.rs
niti-hal/src/port/: mod.rs  niti.rs  uno.rs
waterman/: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
waterman/src/: board.rs  console.rs  main.rs  ui.rs
waterman/src/avrdude/: avrdude-6.conf  mod.rs
