[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[workspace]
members = [
    # The generic hal definitions
    "avr-hal-generic",

    # MCU HAL crates
    "mcu/atmega-hal",
    

    # Higher level crates
    "niti-eal",

    # Examples
   "examples/niti-v1",
    "examples/arduino-mega2560",
    "examples/arduino-uno",
    "examples/arduino-nano",
]
exclude = [
   
    "waterman",
]
resolver = "2"
