[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[workspace]
members = [
    # The generic hal definitions
    "avr-hal-generic",

    # MCU HAL crates
    "mcu/atmega-hal",


    # Higher level crates
    "niti-hal",

    # Examples
    "examples/arduino-mega2560",
    "examples/arduino-nano",
    "examples/arduino-uno",
   "examples/niti-v1",
]
exclude = [
    # Cool waterman! Nice 💧!
    "waterman",
]
resolver = "2"
