[package]
name = "atmega-hal"
version = "0.1.0"

authors = ["Sreeraj V Rajesh <cyberkutti@gmail.com>"]
edition = "2021"
description = "HAL crate for ATmega-series AVR microcontrollers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cyberkutti-iedc/niti-hal"
keywords = ["avr", "arduino"]
categories = ["no-std", "embedded", "hardware-support"]

[features]
rt = ["avr-device/rt"]
device-selected = []
enable-extra-adc = []
atmega164pa = ["avr-device/atmega164pa", "device-selected"]
atmega168 = ["avr-device/atmega168", "device-selected"]
atmega328p = ["avr-device/atmega328p", "device-selected"]
atmega328pb = ["avr-device/atmega328pb", "device-selected"]
atmega2560 = ["avr-device/atmega2560", "device-selected"]
niti-v1 = ["avr-device/niti-v1", "device-selected"]


critical-section-impl = ["avr-device/critical-section-impl"]

# Allow certain downstream crates to overwrite the device selection error by themselves.
disable-device-selection-error = []

# We must select a microcontroller to build on docs.rs
docsrs = ["atmega328p"]

[dependencies]
avr-hal-generic = { path = "../../avr-hal-generic/" }

[dependencies.avr-device]
version = "0.7"

# Because this crate has its own check that at least one device is selected, we
# can safely "circumvent" the check in `avr-device`.
#
# Why would we want that?  Otherwise, as `avr-device` is compiled first, its
# error will be shown and ours won't which leads to a degraded user experience
# as the displayed error message does not really tell what needs to be done...
features = ["device-selected"]

[package.metadata.docs.rs]
features = ["docsrs"]
